--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "outfit" , Arial, sans-serif, "Space Grotesk";
+  font-family: "outfit" , Arial,Helvetica, sans-serif, "Space Grotesk";
 }
 
 @layer utilities {
