--- a/src/vars.css
+++ b/src/vars.css
@@ -3,13 +3,12 @@
 
 :root {
   /* Colours */
-  --color-text: #ffffff;
+  --color-text: #fff;
   --color-primary: #576cbc;
-  --color-text: #19376d;
-  --color-text: #0b2447;
-  --color-text: #04152d;
+  --color-secondary: #19376d;
+  --color-dark: #0b2447;
+  --color-bg: #04152d;
 
   /* Fonts */
-  --font-robot: "Roboto";
-
+  --font-roboto: "Roboto";
 }
