--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -6,8 +6,8 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 49px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-left: 10%;
+  margin-right: 10%;
   z-index:1;
 }
 
