--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -39,13 +39,20 @@
   font-family: var(--font-roboto);
   margin-bottom:52px;
 }
+.BtnDiv{
+  display:flex;
+  gap: 10px;
+  padding:5px;
+  justify-content:space-between;
+  flex-wrap: wrap;
 
-.contactBtn{
+}
+.Btns{
   text-decoration: none;
   background-color: var(--color-primary);
   color: var(--color-text);
   border-radius:100px;
-  font-size: 30px;
+  font-size: 20px;
   font-weight:600;
   padding: 17px 26px;
   box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
