Done with modification of the project cards

--- a/src/components/Project/ProjectCard.module.css
+++ b/src/components/Project/ProjectCard.module.css
@@ -12,6 +12,8 @@
 
 .image {
   margin-bottom: 26px;
+  max-height:200px;
+  border-radius:10px;
 }
 
 .title {
@@ -23,6 +25,11 @@
   margin-top: 6px;
   font-size: 25px;
   font-weight: 400;
+  text-overflow: ellipsis;
+  overflow:hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3; 
+  -webkit-box-orient: vertical;
 }
 
 .skills {
